--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
@@ -20,11 +20,11 @@
     "i18next-http-backend": "^3.0.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.344.0",
-    "next": "15.5.0",
     "next-i18next": "^15.3.0",
     "openai": "^5.10.1",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "next": "14.2.10",
     "react-i18next": "^15.7.2",
     "react-leaflet": "^4.2.1"
   },
