--- a/package.json
+++ b/package.json
@@ -15,23 +15,18 @@
     "@turf/rewind": "^7.0.0",
     "@vercel/analytics": "^1.5.0",
     "dynamic": "^1.0.0",
-    "gray-matter": "^4.0.3",
+    "i18next": "^25.4.2",
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-http-backend": "^3.0.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.344.0",
-    "next": "14.2.10",
-    "next-intl": "^4.3.5",
-    "next-mdx-remote": "^5.0.0",
+    "next-i18next": "^15.3.0",
     "openai": "^5.10.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-leaflet": "^4.2.1",
-    "react-markdown": "^10.1.0",
-    "rehype-autolink-headings": "^7.1.0",
-    "rehype-slug": "^6.0.0",
-    "remark": "^15.0.1",
-    "remark-gfm": "^4.0.1"
+    "next": "14.2.10",
+    "react-i18next": "^15.7.2",
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
